fix: Table responsive CSS on mobile - refs #270424

--- a/src/components/manage/Blocks/DataFigure/less/public.less
+++ b/src/components/manage/Blocks/DataFigure/less/public.less
@@ -13,6 +13,12 @@
   margin-top: 1rem;
 }
 
+.data-figure-block {
+  .ui.table:not(.unstackable) tr {
+    padding-bottom: 3em !important;
+  }
+}
+
 @media print {
   .data-table-animation {
     display: block;
